chenged custumer section

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,6 +1,9 @@
 @font-face {
   font-family: salom;
-  src: url(/fonts/Montserrat-Black.ttf);
+  src: url(/fonts/Lemonada-Medium.ttf);
+}
+body {
+  font-family: salom;
 }
 html {
   font-size: 62.5%;
