--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "base/variable";
 @import "base/mixin";
 @import "base/reset";
+@import "base/typogtaphy";
 @import "components/button";
 @import "layouts/grid";
 @import "layouts/header";
