--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: salom;
-  src: url(/fonts/Montserrat-Black.ttf); }
+  src: url(/fonts/Lemonada-Medium.ttf); }
+
+body {
+  font-family: salom; }
 
 html {
   font-size: 62.5%; }
@@ -25,6 +28,57 @@ input,
 select {
   outline: none; }
 
+.main__item {
+  display: flex; }
+
+.title {
+  color: #c69963;
+  text-transform: uppercase;
+  font-size: 1.4rem; }
+
+.heading {
+  color: #fff;
+  font-size: 2.2rem; }
+
+.draw {
+  background-color: #fff;
+  width: 100%;
+  height: 1.5px; }
+
+.custumers--heading {
+  color: #473b30;
+  font-size: 2.8rem; }
+
+.lorem {
+  margin: 4rem 0; }
+
+.btn {
+  background-color: #c69963;
+  color: #fff;
+  font-size: 1.6rem;
+  padding: 0.5rem 1.4rem;
+  text-transform: uppercase;
+  position: relative;
+  transition: all 0.2s ease-out; }
+  .btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.473);
+    transition: all 0.4s;
+    z-index: -2; }
+  .btn:hover::after {
+    opacity: 0;
+    transform: scale(1.4);
+    z-index: 2; }
+
+.hero__btn {
+  display: inline-block;
+  margin: 3rem 0; }
+
 .grid1 {
   display: grid;
   grid-template-columns: repeat(1, 1fr); }
@@ -37,7 +91,7 @@ select {
 .grid3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 1.5rem; }
+  column-gap: 1rem; }
 
 .grid4 {
   display: grid;
@@ -53,3 +107,116 @@ select {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 1rem; }
+
+header {
+  background-color: #101d2c;
+  height: 100vh; }
+
+.left {
+  width: 5%;
+  height: 900rem;
+  background-color: #c69963; }
+
+.right {
+  width: 95%; }
+
+.hero {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); }
+  .hero__left {
+    padding: 3rem;
+    grid-column: 1/4;
+    background-image: linear-gradient(#101d2ccb, #101d2c), url(/img/gal-7.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh; }
+    .hero__left--logo img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 12rem;
+      width: 15%; }
+    .hero__left--footer img {
+      width: 4rem; }
+    .hero__left--seen {
+      color: #fff;
+      margin-top: 10rem;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 0; }
+    .hero__left--parag {
+      text-align: center;
+      font-size: 1.4rem;
+      margin-top: -1rem; }
+    .hero__left--footer {
+      margin-top: 3rem; }
+      .hero__left--footer img {
+        width: 14rem;
+        height: 3rem; }
+  .hero__right {
+    height: 100vh;
+    grid-column: 4/5; }
+    .hero__right--realtors {
+      padding: 6rem;
+      text-align: center; }
+      .hero__right--realtors--heading {
+        color: #c69963;
+        margin-bottom: 8rem; }
+    .hero__right--item {
+      display: flex;
+      margin-top: 2rem; }
+      .hero__right--item img {
+        border-radius: 50%;
+        width: 6rem;
+        height: 6rem; }
+      .hero__right--item-name {
+        color: #fff;
+        text-align: left;
+        margin-left: 1rem; }
+        .hero__right--item-name h3 {
+          font-size: 1.2rem; }
+        .hero__right--item-name p {
+          font-size: 0.9rem; }
+
+.section__letters {
+  height: auto;
+  padding: 10rem 0;
+  color: #54473a; }
+  .section__letters--item:not(:last-child) {
+    margin-bottom: 6rem; }
+  .section__letters--heading {
+    margin-bottom: 2rem; }
+
+.section__custumers {
+  height: 70vh;
+  background-color: #f9f7f6; }
+  .section__custumers--left {
+    position: relative;
+    background-image: linear-gradient(#54473a86, #54473a8e), url(/img/back.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100%; }
+    .section__custumers--left--img-1 {
+      position: absolute;
+      width: 35rem;
+      height: 25rem;
+      top: 0;
+      left: 0;
+      transform: translate(40%, 50%); }
+    .section__custumers--left--img-2 {
+      position: absolute;
+      width: 35rem;
+      height: 18rem;
+      bottom: 5rem;
+      right: -3rem; }
+  .section__custumers--right {
+    padding: 0 10rem; }
+  .section__custumers--paragraf {
+    margin: 3rem 0;
+    line-height: 1.5; }
+  .section__custumers--title {
+    margin-top: 5rem; }
+
+.section__homes--img {
+  width: 4rem; }
