--- a/sass/base/_variable.scss
+++ b/sass/base/_variable.scss
@@ -1,2 +1,36 @@
 $btn-background: #c69963;
 $background: #101d2c;
+// QUERY MANAGER
+
+@mixin respons($breakpoint) {
+  @if $breakpoint==big {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+    // 1800px
+  }
+  @if $breakpoint==tab-land {
+    @media (max-width: 75em) {
+      @content;
+      // 1200
+    }
+  }
+  @if $breakpoint==tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+      // 900px
+    }
+  }
+  @if $breakpoint==phone {
+    @media (max-width: 28.875em) {
+      @content;
+      // 462px
+    }
+  }
+  @if $breakpoint==small {
+    @media (max-width: 19.5em) {
+      @content;
+      // 312px
+    }
+  }
+}
