--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,25 @@ input,
 select {
   outline: none; }
 
-.main__item {
-  display: flex; }
-
 .title {
   color: #c69963;
   text-transform: uppercase;
   font-size: 1.4rem; }
+  @media (max-width: 19.5em) {
+    .title {
+      font-size: 1.2rem; } }
 
 .heading {
   color: #fff;
   font-size: 2.2rem; }
+  @media (max-width: 28.875em) {
+    .heading {
+      width: 100%;
+      font-size: 1.8rem;
+      line-height: 1; } }
+  @media (max-width: 19.5em) {
+    .heading {
+      font-size: 1.6rem; } }
 
 .draw {
   background-color: #fff;
@@ -48,9 +56,18 @@ select {
 .custumers--heading {
   color: #473b30;
   font-size: 2.8rem; }
+  @media (max-width: 28.875em) {
+    .custumers--heading {
+      font-size: 1.8rem; } }
+  @media (max-width: 19.5em) {
+    .custumers--heading {
+      font-size: 1.4rem; } }
 
 .lorem {
   margin: 4rem 0; }
+  @media (max-width: 56.25em) {
+    .lorem {
+      margin: 1.4rem 0; } }
 
 .btn {
   background-color: #c69963;
@@ -60,6 +77,12 @@ select {
   text-transform: uppercase;
   position: relative;
   transition: all 0.2s ease-out; }
+  @media (max-width: 56.25em) {
+    .btn {
+      font-size: 1.2rem; } }
+  @media (max-width: 19.5em) {
+    .btn {
+      font-size: 0.8rem; } }
   .btn::after {
     content: "";
     position: absolute;
@@ -78,6 +101,21 @@ select {
 .hero__btn {
   display: inline-block;
   margin: 3rem 0; }
+  @media (max-width: 56.25em) {
+    .hero__btn {
+      font-size: 1.2rem; } }
+  @media (max-width: 28.875em) {
+    .hero__btn {
+      font-size: 1rem; } }
+  @media (max-width: 19.5em) {
+    .hero__btn {
+      font-size: 0.8rem; } }
+
+.homes__btn {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center; }
 
 .grid1 {
   display: grid;
@@ -91,7 +129,7 @@ select {
 .grid3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 1rem; }
+  column-gap: 3rem; }
 
 .grid4 {
   display: grid;
@@ -108,21 +146,145 @@ select {
   grid-template-columns: repeat(6, 1fr);
   column-gap: 1rem; }
 
+.grid8 {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  gap: 1rem; }
+
 header {
   background-color: #101d2c;
   height: 100vh; }
+  @media (max-width: 75em) {
+    header {
+      height: 100vh; } }
+  @media (max-width: 56.25em) {
+    header {
+      height: 60rem; } }
+  @media (max-width: 28.875em) {
+    header {
+      height: 75rem; } }
+  @media (max-width: 19.5em) {
+    header {
+      height: 65rem; } }
+
+footer {
+  background-color: #101d2c;
+  height: auto;
+  padding: 10rem 0; }
+  @media (max-width: 19.5em) {
+    footer {
+      padding: 3rem 0; } }
+
+.footer__menus ul {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 2rem; }
+  @media (max-width: 56.25em) {
+    .footer__menus ul {
+      display: flex;
+      flex-wrap: wrap; } }
+  .footer__menus ul li {
+    padding: 0 1rem;
+    text-align: center; }
+    .footer__menus ul li a {
+      color: #fff;
+      text-transform: uppercase; }
+
+.footer--paragraf {
+  color: #fff;
+  margin-top: 3rem;
+  text-align: center;
+  letter-spacing: 0.2rem; }
+
+.main__item {
+  display: flex; }
+  @media (max-width: 75em) {
+    .main__item {
+      flex-direction: column; } }
 
 .left {
   width: 5%;
-  height: 900rem;
+  height: calc();
   background-color: #c69963; }
+  @media (max-width: 75em) {
+    .left {
+      width: 100vw;
+      height: 4rem; } }
+  @media (max-width: 19.5em) {
+    .left {
+      height: 25px; } }
+  .left__burger {
+    display: block;
+    margin: 2rem auto; }
+    @media (max-width: 75em) {
+      .left__burger {
+        margin: 0; } }
+    .left__burger span {
+      position: relative;
+      display: block;
+      margin: 4rem auto;
+      width: 70%;
+      height: 4px;
+      background-color: #fff; }
+      @media (max-width: 75em) {
+        .left__burger span {
+          width: 3%;
+          position: absolute;
+          right: 2rem;
+          top: -2rem; } }
+      @media (max-width: 56.25em) {
+        .left__burger span {
+          height: 3px; } }
+      @media (max-width: 19.5em) {
+        .left__burger span {
+          top: -3rem;
+          width: 5%;
+          right: 1rem; } }
+      .left__burger span::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        top: -1rem;
+        background-color: #fff; }
+        @media (max-width: 56.25em) {
+          .left__burger span::after {
+            top: -0.8rem; } }
+        @media (max-width: 28.875em) {
+          .left__burger span::after {
+            top: -0.6rem; } }
+      .left__burger span::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        top: 1rem;
+        background-color: #fff; }
+        @media (max-width: 56.25em) {
+          .left__burger span::before {
+            top: 0.8rem; } }
+        @media (max-width: 28.875em) {
+          .left__burger span::before {
+            top: 0.6rem; } }
 
 .right {
   width: 95%; }
+  @media (max-width: 75em) {
+    .right {
+      width: 100vw; } }
 
 .hero {
   display: grid;
   grid-template-columns: repeat(4, 1fr); }
+  @media (max-width: 56.25em) {
+    .hero {
+      display: flex;
+      flex-direction: column; } }
   .hero__left {
     padding: 3rem;
     grid-column: 1/4;
@@ -130,20 +292,42 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh; }
+    height: 100%; }
+    @media (max-width: 19.5em) {
+      .hero__left {
+        height: 50vh; } }
     .hero__left--logo img {
       display: block;
       margin: 0 auto;
       margin-bottom: 12rem;
       width: 15%; }
+      @media (max-width: 75em) {
+        .hero__left--logo img {
+          margin-bottom: 4rem; } }
+      @media (max-width: 56.25em) {
+        .hero__left--logo img {
+          margin-bottom: 9rem; } }
+      @media (max-width: 19.5em) {
+        .hero__left--logo img {
+          width: 30%;
+          margin-bottom: 4rem; } }
     .hero__left--footer img {
       width: 4rem; }
+      @media (max-width: 56.25em) {
+        .hero__left--footer img {
+          width: 3rem; } }
     .hero__left--seen {
       color: #fff;
       margin-top: 10rem;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 0; }
+      @media (max-width: 75em) {
+        .hero__left--seen {
+          margin-top: 6rem; } }
+      @media (max-width: 19.5em) {
+        .hero__left--seen {
+          margin-top: 2rem; } }
     .hero__left--parag {
       text-align: center;
       font-size: 1.4rem;
@@ -153,15 +337,54 @@ header {
       .hero__left--footer img {
         width: 14rem;
         height: 3rem; }
+        @media (max-width: 56.25em) {
+          .hero__left--footer img {
+            width: 10rem;
+            height: 2rem; } }
+        @media (max-width: 28.875em) {
+          .hero__left--footer img {
+            width: 6rem;
+            height: 1.5rem; } }
+        @media (max-width: 19.5em) {
+          .hero__left--footer img {
+            width: 4rem;
+            height: 1rem; } }
+    @media (max-width: 19.5em) {
+      .hero__left {
+        height: 40%; } }
   .hero__right {
     height: 100vh;
     grid-column: 4/5; }
+    @media (max-width: 56.25em) {
+      .hero__right--item {
+        margin-right: 3rem; } }
     .hero__right--realtors {
       padding: 6rem;
       text-align: center; }
+      @media (max-width: 56.25em) {
+        .hero__right--realtors {
+          padding: 0;
+          display: flex;
+          flex-direction: column; } }
       .hero__right--realtors--heading {
-        color: #c69963;
-        margin-bottom: 8rem; }
+        color: #c69963; }
+        @media (max-width: 28.875em) {
+          .hero__right--realtors--heading {
+            margin-top: 4rem; } }
+        @media (max-width: 19.5em) {
+          .hero__right--realtors--heading {
+            margin-top: 2rem; } }
+      .hero__right--realtors--items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; }
+        @media (max-width: 56.25em) {
+          .hero__right--realtors--items {
+            flex-direction: row; } }
+        @media (max-width: 28.875em) {
+          .hero__right--realtors--items {
+            flex-direction: column; } }
     .hero__right--item {
       display: flex;
       margin-top: 2rem; }
@@ -174,49 +397,227 @@ header {
         text-align: left;
         margin-left: 1rem; }
         .hero__right--item-name h3 {
-          font-size: 1.2rem; }
+          font-size: 1.1rem; }
         .hero__right--item-name p {
-          font-size: 0.9rem; }
+          font-size: 0.7rem; }
+    @media (max-width: 19.5em) {
+      .hero__right {
+        height: 60%; } }
 
 .section__letters {
   height: auto;
   padding: 10rem 0;
   color: #54473a; }
+  @media (max-width: 56.25em) {
+    .section__letters {
+      padding: 3rem 0; } }
+  @media (max-width: 28.875em) {
+    .section__letters {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 1rem; } }
   .section__letters--item:not(:last-child) {
     margin-bottom: 6rem; }
+    @media (max-width: 28.875em) {
+      .section__letters--item:not(:last-child) {
+        margin-bottom: 2rem; } }
+  @media (max-width: 75em) {
+    .section__letters--item:last-child {
+      width: 80%; } }
+  @media (max-width: 19.5em) {
+    .section__letters--item:last-child {
+      margin-bottom: 5rem; } }
   .section__letters--heading {
     margin-bottom: 2rem; }
 
 .section__custumers {
   height: 70vh;
   background-color: #f9f7f6; }
+  @media (max-width: 56.25em) {
+    .section__custumers {
+      display: flex;
+      flex-direction: column-reverse; } }
+  @media (max-width: 56.25em) {
+    .section__custumers {
+      height: 100vh; } }
+  @media (max-width: 19.5em) {
+    .section__custumers {
+      height: 60vh; } }
   .section__custumers--left {
     position: relative;
     background-image: linear-gradient(#54473a86, #54473a8e), url(/img/back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
-    height: 100%; }
+    background-attachment: fixed; }
     .section__custumers--left--img-1 {
       position: absolute;
-      width: 35rem;
-      height: 25rem;
+      width: 70%;
+      height: 65%;
       top: 0;
       left: 0;
-      transform: translate(40%, 50%); }
+      transform: translate(30%, 40%); }
+      @media (max-width: 75em) {
+        .section__custumers--left--img-1 {
+          transform: translate(25%, 35%); } }
+      @media (max-width: 56.25em) {
+        .section__custumers--left--img-1 {
+          width: 55%;
+          height: 70%;
+          transform: translate(25%, 30%); } }
+      @media (max-width: 28.875em) {
+        .section__custumers--left--img-1 {
+          height: 60%; } }
+      @media (max-width: 19.5em) {
+        .section__custumers--left--img-1 {
+          height: 50%;
+          width: 70%; } }
     .section__custumers--left--img-2 {
       position: absolute;
-      width: 35rem;
-      height: 18rem;
+      width: 60%;
+      height: 40%;
       bottom: 5rem;
       right: -3rem; }
+      @media (max-width: 75em) {
+        .section__custumers--left--img-2 {
+          width: 55%;
+          height: 50%;
+          bottom: 2rem; } }
+      @media (max-width: 56.25em) {
+        .section__custumers--left--img-2 {
+          width: 40%;
+          right: 2rem; } }
+      @media (max-width: 28.875em) {
+        .section__custumers--left--img-2 {
+          height: 40%; } }
+      @media (max-width: 19.5em) {
+        .section__custumers--left--img-2 {
+          height: 35%;
+          width: 55%;
+          bottom: 4rem; } }
+    @media (max-width: 56.25em) {
+      .section__custumers--left {
+        padding: 15rem 0; } }
   .section__custumers--right {
     padding: 0 10rem; }
+    @media (max-width: 56.25em) {
+      .section__custumers--right {
+        height: 70rem;
+        padding: 1rem 8rem;
+        height: 50rem;
+        background-color: #f9f7f6; } }
+    @media (max-width: 19.5em) {
+      .section__custumers--right {
+        padding: 2rem 3rem; } }
   .section__custumers--paragraf {
     margin: 3rem 0;
     line-height: 1.5; }
   .section__custumers--title {
     margin-top: 5rem; }
+    @media (max-width: 56.25em) {
+      .section__custumers--title {
+        margin-top: 2rem; } }
 
-.section__homes--img {
-  width: 4rem; }
+.section__homes {
+  height: auto;
+  transition: all 0.9s;
+  padding: 8rem 0; }
+  @media (max-width: 19.5em) {
+    .section__homes {
+      padding: 4rem 0; } }
+  .section__homes--heading {
+    transition: all 0.9s;
+    position: absolute;
+    left: 6rem;
+    top: 18rem;
+    color: #fff;
+    background-color: #101d2c;
+    padding: 0.2rem 0;
+    width: 60%;
+    text-align: center; }
+    @media (max-width: 19.5em) {
+      .section__homes--heading {
+        width: 70%;
+        left: 4rem;
+        top: 18rem; } }
+  .section__homes--item {
+    transition: all 0.9s;
+    width: 100%;
+    height: 38rem;
+    background-color: #f9f7f6;
+    position: relative;
+    margin: 2rem 0; }
+    .section__homes--item:hover .section__homes--heading {
+      transform: rotateY(360deg); }
+    @media (max-width: 19.5em) {
+      .section__homes--item {
+        margin: 0; } }
+  .section__homes--img {
+    width: 100%;
+    height: 60%; }
+  .section__homes--list {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem; }
+  @media (max-width: 56.25em) {
+    .section__homes--items {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 3rem; } }
+  @media (max-width: 28.875em) {
+    .section__homes--items {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 3rem; } }
+
+.images {
+  margin: 2rem; }
+  .images__item {
+    width: 20rem;
+    height: 10rem;
+    width: 100%;
+    height: 100%; }
+    .images__item--1 {
+      grid-column: 1/3;
+      grid-row: 1/3; }
+    .images__item--2 {
+      grid-column: 3/6;
+      grid-row: 1/4; }
+    .images__item--3 {
+      grid-column: 6/7;
+      grid-row: 1/3; }
+    .images__item--4 {
+      grid-column: 7/9;
+      grid-row: 1/3; }
+    .images__item--5 {
+      grid-column: 1/3;
+      grid-row: 3/6; }
+    .images__item--6 {
+      grid-column: 3/5;
+      grid-row: 4/6; }
+    .images__item--7 {
+      grid-column: 5/6;
+      grid-row: 4/5; }
+    .images__item--8 {
+      grid-column: 6/8;
+      grid-row: 3/5; }
+    .images__item--9 {
+      grid-column: 8/9;
+      grid-row: 3/6; }
+    .images__item--9 {
+      grid-column: 8/9;
+      grid-row: 3/6; }
+    .images__item--10 {
+      grid-column: 1/2;
+      grid-row: 6/8; }
+    .images__item--11 {
+      grid-column: 2/4;
+      grid-row: 6/8; }
+    .images__item--12 {
+      grid-column: 4/5;
+      grid-row: 6/8; }
+    .images__item--13 {
+      grid-column: 5/8;
+      grid-row: 5/8; }
+    .images__item--14 {
+      grid-column: 8/9;
+      grid-row: 6/8; }
