--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -10,7 +10,7 @@
 .grid3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 1rem;
+  column-gap: 3rem;
 }
 .grid4 {
   display: grid;
@@ -26,4 +26,10 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 1rem;
+}
+.grid8 {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  gap: 1rem;
 }
