--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,14 +1,95 @@
+.main__item {
+  display: flex;
+  @include respons(tab-land) {
+    flex-direction: column;
+  }
+}
 .left {
   width: 5%;
-  height: 900rem;
+  height: calc();
   background-color: $btn-background;
+  @include respons(tab-land) {
+    width: 100vw;
+    height: 4rem;
+  }
+  @include respons(small) {
+    height: 25px;
+  }
+  &__burger {
+    display: block;
+    margin: 2rem auto;
+    @include respons(tab-land) {
+      margin: 0;
+    }
+    span {
+      position: relative;
+      display: block;
+      margin: 4rem auto;
+      width: 70%;
+      height: 4px;
+      background-color: #fff;
+      @include respons(tab-land) {
+        width: 3%;
+        position: absolute;
+        right: 2rem;
+        top: -2rem;
+      }
+      @include respons(tab-port) {
+        height: 3px;
+      }
+      @include respons(small) {
+        top: -3rem;
+        width: 5%;
+        right: 1rem;
+      }
+      &::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        top: -1rem;
+        background-color: #fff;
+        @include respons(tab-port) {
+          top: -0.8rem;
+        }
+        @include respons(phone) {
+          top: -0.6rem;
+        }
+      }
+      &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        top: 1rem;
+        background-color: #fff;
+        @include respons(tab-port) {
+          top: 0.8rem;
+        }
+        @include respons(phone) {
+          top: 0.6rem;
+        }
+      }
+    }
+  }
 }
 .right {
   width: 95%;
+  @include respons(tab-land) {
+    width: 100vw;
+  }
 }
 .hero {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  @include respons(tab-port) {
+    display: flex;
+    flex-direction: column;
+  }
 
   &__left {
     padding: 3rem;
@@ -17,18 +98,34 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
+    height: 100%;
+    @include respons(small) {
+      height: 50vh;
+    }
     &--logo {
       img {
         display: block;
         margin: 0 auto;
         margin-bottom: 12rem;
         width: 15%;
+        @include respons(tab-land) {
+          margin-bottom: 4rem;
+        }
+        @include respons(tab-port) {
+          margin-bottom: 9rem;
+        }
+        @include respons(small) {
+          width: 30%;
+          margin-bottom: 4rem;
+        }
       }
     }
     &--footer {
       img {
         width: 4rem;
+        @include respons(tab-port) {
+          width: 3rem;
+        }
       }
     }
     &--seen {
@@ -37,6 +134,12 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 0;
+      @include respons(tab-land) {
+        margin-top: 6rem;
+      }
+      @include respons(small) {
+        margin-top: 2rem;
+      }
     }
     &--parag {
       text-align: center;
@@ -48,18 +151,60 @@
       img {
         width: 14rem;
         height: 3rem;
+        @include respons(tab-port) {
+          width: 10rem;
+          height: 2rem;
+        }
+        @include respons(phone) {
+          width: 6rem;
+          height: 1.5rem;
+        }
+        @include respons(small) {
+          width: 4rem;
+          height: 1rem;
+        }
       }
+    }
+    @include respons(small) {
+      height: 40%;
     }
   }
   &__right {
     height: 100vh;
     grid-column: 4/5;
+    &--item {
+      @include respons(tab-port) {
+        margin-right: 3rem;
+      }
+    }
     &--realtors {
       padding: 6rem;
       text-align: center;
+      @include respons(tab-port) {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+      }
       &--heading {
         color: $btn-background;
-        margin-bottom: 8rem;
+        @include respons(phone) {
+          margin-top: 4rem;
+        }
+        @include respons(small) {
+          margin-top: 2rem;
+        }
+      }
+      &--items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        @include respons(tab-port) {
+          flex-direction: row;
+        }
+        @include respons(phone) {
+          flex-direction: column;
+        }
       }
     }
     &--item {
@@ -75,12 +220,15 @@
         text-align: left;
         margin-left: 1rem;
         h3 {
-          font-size: 1.2rem;
+          font-size: 1.1rem;
         }
         p {
-          font-size: 0.9rem;
+          font-size: 0.7rem;
         }
       }
+    }
+    @include respons(small) {
+      height: 60%;
     }
   }
 }
@@ -89,9 +237,28 @@
     height: auto;
     padding: 10rem 0;
     color: #54473a;
+    @include respons(tab-port) {
+      padding: 3rem 0;
+    }
+    @include respons(phone) {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 1rem;
+    }
     &--item {
       &:not(:last-child) {
         margin-bottom: 6rem;
+        @include respons(phone) {
+          margin-bottom: 2rem;
+        }
+      }
+      &:last-child {
+        @include respons(tab-land) {
+          width: 80%;
+        }
+        @include respons(small) {
+          margin-bottom: 5rem;
+        }
       }
     }
     &--heading {
@@ -100,8 +267,17 @@
   }
   &__custumers {
     height: 70vh;
-
     background-color: #f9f7f6;
+    @include respons(tab-port) {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+    @include respons(tab-port) {
+      height: 100vh;
+    }
+    @include respons(small) {
+      height: 60vh;
+    }
     &--left {
       position: relative;
       background-image: linear-gradient(#54473a86, #54473a8e),
@@ -109,25 +285,69 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
-      height: 100%;
+
       &--img-1 {
         position: absolute;
-        width: 35rem;
-        height: 25rem;
+        width: 70%;
+        height: 65%;
         top: 0;
         left: 0;
-        transform: translate(40%, 50%);
+        transform: translate(30%, 40%);
+        @include respons(tab-land) {
+          transform: translate(25%, 35%);
+        }
+        @include respons(tab-port) {
+          width: 55%;
+          height: 70%;
+          transform: translate(25%, 30%);
+        }
+        @include respons(phone) {
+          height: 60%;
+        }
+        @include respons(small) {
+          height: 50%;
+          width: 70%;
+        }
       }
       &--img-2 {
         position: absolute;
-        width: 35rem;
-        height: 18rem;
+        width: 60%;
+        height: 40%;
         bottom: 5rem;
         right: -3rem;
+        @include respons(tab-land) {
+          width: 55%;
+          height: 50%;
+          bottom: 2rem;
+        }
+        @include respons(tab-port) {
+          width: 40%;
+          right: 2rem;
+        }
+        @include respons(phone) {
+          height: 40%;
+        }
+        @include respons(small) {
+          height: 35%;
+          width: 55%;
+          bottom: 4rem;
+        }
+      }
+      @include respons(tab-port) {
+        padding: 15rem 0;
       }
     }
     &--right {
       padding: 0 10rem;
+      @include respons(tab-port) {
+        height: 70rem;
+        padding: 1rem 8rem;
+        height: 50rem;
+        background-color: #f9f7f6;
+      }
+      @include respons(small) {
+        padding: 2rem 3rem;
+      }
     }
     &--paragraf {
       margin: 3rem 0;
@@ -135,10 +355,140 @@
     }
     &--title {
       margin-top: 5rem;
+      @include respons(tab-port) {
+        margin-top: 2rem;
+      }
+    }
+  }
+  &__homes {
+    height: auto;
+    transition: all 0.9s;
+    padding: 8rem 0;
+    @include respons(small) {
+      padding: 4rem 0;
+    }
+    &--heading {
+      transition: all 0.9s;
+      position: absolute;
+      left: 6rem;
+      top: 18rem;
+      color: #fff;
+      background-color: #101d2c;
+      padding: 0.2rem 0;
+      width: 60%;
+      text-align: center;
+      @include respons(small) {
+        width: 70%;
+        left: 4rem;
+        top: 18rem;
+      }
+    }
+    &--item {
+      transition: all 0.9s;
+      width: 100%;
+      height: 38rem;
+      background-color: #f9f7f6;
+      position: relative;
+      margin: 2rem 0;
+      &:hover {
+        .section__homes--heading {
+          transform: rotateY(360deg);
+        }
+      }
+      @include respons(small) {
+        margin: 0;
+      }
+    }
+    &--img {
+      width: 100%;
+      height: 60%;
+    }
+    &--list {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 2rem;
+    }
+    &--items {
+      @include respons(tab-port) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
+        // margin: 0 4rem;
+      }
+      @include respons(phone) {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 3rem;
+      }
     }
   }
 }
-
-.section__homes--img {
-  width: 4rem;
+.images {
+  margin: 2rem;
+  &__item {
+    width: 20rem;
+    height: 10rem;
+    width: 100%;
+    height: 100%;
+    &--1 {
+      grid-column: 1/3;
+      grid-row: 1/3;
+    }
+    &--2 {
+      grid-column: 3/6;
+      grid-row: 1/4;
+    }
+    &--3 {
+      grid-column: 6/7;
+      grid-row: 1/3;
+    }
+    &--4 {
+      grid-column: 7/9;
+      grid-row: 1/3;
+    }
+    &--5 {
+      grid-column: 1/3;
+      grid-row: 3/6;
+    }
+    &--6 {
+      grid-column: 3/5;
+      grid-row: 4/6;
+    }
+    &--7 {
+      grid-column: 5/6;
+      grid-row: 4/5;
+    }
+    &--8 {
+      grid-column: 6/8;
+      grid-row: 3/5;
+    }
+    &--9 {
+      grid-column: 8/9;
+      grid-row: 3/6;
+    }
+    &--9 {
+      grid-column: 8/9;
+      grid-row: 3/6;
+    }
+    &--10 {
+      grid-column: 1/2;
+      grid-row: 6/8;
+    }
+    &--11 {
+      grid-column: 2/4;
+      grid-row: 6/8;
+    }
+    &--12 {
+      grid-column: 4/5;
+      grid-row: 6/8;
+    }
+    &--13 {
+      grid-column: 5/8;
+      grid-row: 5/8;
+    }
+    &--14 {
+      grid-column: 8/9;
+      grid-row: 6/8;
+    }
+  }
 }
