--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,9 @@ select {
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 1fr);
   gap: 1rem; }
+  @media (max-width: 28.875em) {
+    .grid8 {
+      gap: 0.2rem; } }
 
 header {
   background-color: #101d2c;
