--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -32,4 +32,7 @@
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 1fr);
   gap: 1rem;
+  @include respons(phone) {
+    gap: 0.2rem;
+  }
 }
